--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,9 +3,10 @@ version: "3.8"
 services:
   web:
     build:
-
+      context: ./ecomsite
+      dockerfile: Dockerfile
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
-      - .:/code/
+      - ./ecomsite:/code
     ports:
       - "8000:8000"
