add to cart without login

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     build:
       context: ./ecomsite
       dockerfile: Dockerfile
-    command: python manage.py runserver 0.0.0.0:8000
+    command: python -u manage.py runserver 0.0.0.0:8000
     volumes:
       - ./ecomsite:/code
     ports:
